Get rid of a bunch of Integer instantiations
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@935163 13f79535-47bb-0310-9956-ffa450edef68